fixed z-index

--- a/sbux/style/utility-classes.css
+++ b/sbux/style/utility-classes.css
@@ -262,6 +262,10 @@ Other stuff
   z-index:2
 }
 
+.z-3{
+  z-index:3
+}
+
 /* Styling */
 
 .border-radius-6 {
